# PlexClockifyTracker

./: README.md  setup.cfg
plexclockifytracker/: __init__.py  clockify.py  config.py  listener.py
